--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.7.0",
+    "date-fns": "^4.1.0",
     "prisma": "^6.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
