commit fix schema

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DATABASE_URL="postgresql://postgres.kxceuhdzohelwgmedasl:PPDB2025@mq@aws-0-ap-so
 
 # Direct connection to the database. Used for migrations
 DIRECT_URL="postgresql://postgres.kxceuhdzohelwgmedasl:PPDB2025@mq@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+ACCESS_TOKEN_SECRET="ppdbkaryasantri2025"
+REFRESH_TOKEN_SECRET="ppdbkaryasantri2025"
